[package]
name = "capitalcommander-api-rs"
version = "0.1.0"
authors = ["Andy Nagels <thereisanewway@gmail.com>"]

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
actix = "0.8.3"
actix-web = "1.0"
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
chrono = { version = "0.4.9", features = ["serde"] }
